--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
-name = "pyproteingym"
+name = "ProteinGymPy"
 version = "0.1.0"
-description = "Add your description here"
+description = "<todo> @tram-nguyen-n add description here"
 readme = "README.md"
 authors = [
-    { name = "Tyrone Lee", email = "tyrone_lee@hms.harvard.edu" }
+    { name = "Tyrone Lee", email = "tyrone_lee@hms.harvard.edu" },
+    { name = "Tram Nguyen", email = "tram_nguyen@hms.harvard.edu" }
+
 ]
 requires-python = ">=3.13"
 dependencies = [
@@ -12,7 +14,7 @@ dependencies = [
 ]
 
 [project.scripts]
-pyproteingym = "pyproteingym:main"
+ProteinGymPy = "ProteinGymPy:main"
 
 [build-system]
 requires = ["hatchling"]
