--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "requests>=2.32.4",
+    "pandas>=2.0.0",
+    "numpy>=1.24.0",
 ]
 
 [project.scripts]
