rename source folder to pyproteingym

--- a/pyproteingym/pyproject.toml
+++ b/pyproteingym/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "proteingympy"
+name = "pyproteingym"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-proteingympy = "proteingympy:main"
+pyproteingym = "pyproteingym:main"
 
 [build-system]
 requires = ["hatchling"]
