init pass of dms_corr_plot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,16 @@ dependencies = [
     "pandas>=2.0.0",
     "numpy>=1.24.0",
     "matplotlib>=3.10.5",
+    "seaborn>=0.13.2",
 ]
 
 [project.scripts]
 proteingympy = "proteingympy:main"
+
+[project.optional-dependencies]
+visualization = [
+    "scipy>=1.16.2",
+]
 
 [build-system]
 requires = ["hatchling"]
