--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ proteingympy = "proteingympy:main"
 
 [project.optional-dependencies]
 visualization = [
+    "biopython>=1.86",
+    "nglview>=3.1.4",
     "scipy>=1.16.2",
 ]
 
