--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,5 +9,5 @@ nav:
     - Data Visualization and Exploration: visualization_exploration.md
   - About:
     - License: license.md
-    - Citation: Citation.md
+    - Citation: citation.md
     - References: references.md
