--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "numpy>=1.24.0",
     "matplotlib>=3.10.5",
     "seaborn>=0.13.2",
+    "mkdocs>=1.6.1",
+    "mkdocs-jupyter>=0.25.1",
 ]
 
 [project.scripts]
